@@ -1,3 +1,7 @@
+2009-01-17  kokosabu  <kokosabu@gmail.com>
+
+        * FileBinaryInputPort.cpp: Added buffer mode.
+
 2009-01-15  higepon  <higepon@users.sourceforge.jp>
 
         * ObjectTest.cpp: Added for testing "Base system" of Mosh.
